--- a/Cli/Cli.csproj
+++ b/Cli/Cli.csproj
@@ -20,4 +20,8 @@
         <PackageReference Include="Microsoft.Extensions.Hosting" Version="5.0.0" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Api" />
+    </ItemGroup>
+
 </Project>
