--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,4 +1,4 @@
-image: mcr.microsoft.com/dotnet/sdk:6.0
+image: mcr.microsoft.com/dotnet/sdk:5.0
 
 stages:
   - format
@@ -25,6 +25,8 @@ before_script:
 
 Format:
   stage: format
+  before_script:
+    - dotnet tool install -g dotnet-format --version "7.*" --add-source https://pkgs.dev.azure.com/dnceng/public/_packaging/dotnet7/nuget/v3/index.json
   script:
     - dotnet format --verify-no-changes --no-restore ./PRG2_T07_Team11.sln
 
