--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -28,7 +28,7 @@ Format:
   before_script:
     - dotnet tool install -g dotnet-format
   script:
-    - dotnet format --verify-no-changes --no-restore ./PRG2_T07_Team11.sln
+    - dotnet-format --verify-no-changes --no-restore ./PRG2_T07_Team11.sln
 
 Test:
   stage: test
