Add dotnet tools to PATH

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -27,8 +27,9 @@ Format:
   stage: format
   before_script:
     - dotnet tool install -g dotnet-format
+    - export PATH="$PATH:/root/.dotnet/tools"
   script:
-    - dotnet-format --verify-no-changes --no-restore ./PRG2_T07_Team11.sln
+    - dotnet format --verify-no-changes --no-restore ./PRG2_T07_Team11.sln
 
 Test:
   stage: test
